# ml-algo-square-one

./: README.md  pyproject.toml
src/: main.py  util.py
src/algo/: decision_tree.py  k_means.py  knn.py  linear_reg.py  logistic_reg.py  naive_bayes.py  pca.py  perceptron.py  random_forest.py  support_vector_machine.py
