[tool.poetry]
name = "ml_algo_square_one"
version = "0.1.0"
description = "Different machine learning algorithms implemented from square one."
authors = ["danczw <dev.dc@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
